--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,6 +1,17 @@
-server.port=5000
-spring.datasource.url=jdbc:mysql://localhost:3306/users
-spring.datasource.username=root
-spring.datasource.password=
+server.port=8080
+spring.datasource.url=jdbc:h2:mem:users
+spring.datasource.username=sa
+spring.datasource.password=password	 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
+
+
+
+
+# H2 Configuration
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.h2.console.enabled=true
