--- a/spring-security/src/main/resources/application.properties
+++ b/spring-security/src/main/resources/application.properties
@@ -2,6 +2,6 @@
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/users
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
